# cardinal

./: .gitignore  CHANGELOG.md  Cargo.toml  LAST_RELEASE  Makefile.toml  README.md  Taskfile.yml  output_cc_suggestions.txt  test_basic_debug.rs
.cargo/: config.toml
.config/: cargo.toml
.github/workflows/: check.yml  release-plz.yml  smal-report.yml
cardinal-cli/: Cargo.toml  Taskfile.yml
cardinal-cli/src/: main.rs
cardinal-cli/tests/: buxn_tests.rs  cuxn_tests.rs
cardinal-gui/: CHANGELOG.md  Cargo.toml  Makefile.toml  index.html
cardinal-gui/src/: cardinal_orcas_symbols.rs  e_midi.rs  effects.rs  lib.rs  main.rs  native.rs  stage.rs  uxn.rs  uxn_panel.rs  web.rs
cardinal-uxn/: CHANGELOG.md  Cargo.toml
cardinal-uxn/src/: disassembler.rs  lib.rs
cardinal-uxn/src/native/: mod.rs
cardinal-varvara/: CHANGELOG.md  Cargo.toml
cardinal-varvara/src/: audio.rs  console.rs  controller.rs  controller_device.rs  controller_gilrs.rs  controller_usb.rs  controller_usb_stub.rs  datetime.rs  file.rs  lib.rs  mouse.rs  screen.rs  system.rs  tracker.rs
cardinal-varvara/tests/: snapshots.rs
docker/: Dockerfile.aarch64
notes/: README.md
notes/01.debug/: README.md
notes/02.duplicate_mouse_device/: README.md  tracker.rom  tracker.tal
notes/03.hidusb_controllers/: README.md
notes/04.sym_file_vector_labeling/: README.md
notes/05.cardinal-orcas/: README.md
notes/06.hardware_verifcation/: readme.md
notes/06.hardware_verification/: readme.md
notes/07.xbox_controller_gilrs/: README.md
notes/08.e_midi/: README.md
roms/: cardinal-orcas.rom  orca.rom  orca.rom.sym
roms/cardinal-orcas/: cardinal-orcas.tal  library.tal
roms/orca/: orca.tal
roms/orca/src/: assets.tal  library.tal
support/: build_aarch64.cmd  release.ps1
tools/smal_test/src/: main.rs
tools/smol_test/: Cargo.toml
tools/smol_test/src/: main.rs
uxn-tal/: .gitignore  CHANGELOG.md  Cargo.toml  LAST_RELEASE  LICENSE  README.md  TEST_BRAINFUCK  TEST_ROM_URLS  TEST_SVITLYNA  Taskfile.yml
uxn-tal-common/: CHANGELOG.md  Cargo.toml
uxn-tal-common/src/: cache.rs  lib.rs
uxn-tal-defined/: CHANGELOG.md  Cargo.toml  README.md
uxn-tal-defined/docgen/: Cargo.toml
uxn-tal-defined/docgen/src/: main.rs
uxn-tal-defined/src/: consts.rs  emu_buxn.rs  emu_cuxn.rs  emu_uxn.rs  lib.rs  v1.rs
uxn-tal-defined/tests/: precent_decode.rs  test_orca.rs  test_orca_emulator_args.rs  test_orca_resolution.rs  uxntal_protocol_tests.rs
uxn-tal/examples/: batch_assembler.rs  batch_test.rs  bnf_grammer.rs  comprehensive_demo.rs  console_debug.rs  counter.rs  debug_assemble.rs  debug_cond.rs  debug_dash.rs  debug_devices.rs  debug_test.rs  debug_tokens.rs  device_test.rs  hello_world.rs  label_debug.rs  lexer_debug.rs  minimal.rs  minimal_test.rs  test_basic_debug.rs  test_hyphen.rs  test_macro_call.rs  working_hello.rs  working_roms.rs
uxn-tal/mod/: README.md
uxn-tal/mod/chocolatal/: README.md  chocolatal.rs
uxn-tal/open-in-uxntal/: bg.js  manifest.json  options.html  options.js
uxn-tal/smal-report/: report.md
uxn-tal/smal-report/examples/brainfuck/: brainfuck-stderr.txt
uxn-tal/smal-report/examples/devices/: devices-stderr.txt  devices-stdout.txt
uxn-tal/smal-report/examples/hello/: hello-stderr.txt  hello-stdout.txt
uxn-tal/smal-report/examples/logo/: logo-stderr.txt
uxn-tal/smal-report/examples/mouse/: mouse-stderr.txt
uxn-tal/smal-report/examples/print/: print-stderr.txt  print-stdout.txt
uxn-tal/smal-report/examples/sprite/: sprite-stderr.txt
uxn-tal/src/: assembler.rs  bkend.rs  bkend_buxn.rs  bkend_drif.rs  bkend_uxn.rs  bkend_uxn38.rs  debug.rs  devicemap.rs  dis.rs  dis_uxndis.rs  emu_buxn.rs  emu_cuxn.rs  emu_uxn.rs  emu_uxncli.rs  emulator_utils.rs  error.rs  grammer.rs  hexrev.rs  lexer.rs  lib.rs  mode_basic.rs  mode_orca.rs  opcode_table.rs  opcodes.rs  parser.rs  paths.rs  probe_runtime.rs  probe_tal.rs  protocol_parser.rs  rom.rs  runes.rs  urlutil.rs  util.rs  uxntal_protocol.rs  uxntal_protocol_tests.rs  wsl.rs
uxn-tal/src/chocolatal/: README.md  mod.rs
uxn-tal/src/fetch/: codeberg.rs  downloader.rs  github.rs  html_redirect.rs  includes.rs  local_file.rs  mod.rs  patchstorage.rs  provider.rs  resolver.rs  srht.rs
uxn-tal/tal/: bunnymark.tal  calc.tal  comprehensive_demo.tal  included_file.tal  simple_demo.tal  test_conditional_block.tal  test_conditional_spaced.tal  test_dash_syntax.tal  test_debug_comment.tal  test_direction.tal  test_error_line.tal  test_fixes.tal  test_hex_literals.tal  test_hex_values.tal  test_hyphen.tal  test_include.tal  test_lit_char.tal  test_lit_simple.tal  test_macro_call.tal  test_mixed_string.tal  test_new_features.tal  test_piano_line.tal  test_question.tal  test_relative_sublabel.tal  test_simple_dash.tal  test_simple_string.tal  test_symbols.tal  timer.tal
uxn-tal/tal/validate/: README.md  acid.tal  opctest.tal
uxn-tal/tests/: address_test.rs  assemble_file.rs  ast_debug.rs  opcode_verification.rs  proper_hello.rs  rom_test.rs  simple_test.rs  smal_examples.rs  test_bang_arg1.rs  test_basic_mode.rs  test_blank.rs  test_buxn_buxn_gui.rs  test_console.rs  test_copy.rs  test_cuxn_cardinal_gui.rs  test_fixes.rs  test_git.rs  test_hex_values.rs  test_include.rs  test_macro_call.rs  test_open_url_format.rs  test_orca.rs  test_orca_emulator_args.rs  test_orca_mode_integration.rs  test_orca_resolution.rs  test_patchstorage.rs  test_relative_sublabel.rs  test_roms.rs  test_srht_jumper_orca.rs  test_symbols.rs  test_uxntal_protocol_jumper_orca.rs
