[package]
name = "cardinal-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/davehorner/cardinal"
description = "Simple Uxn + Varvara CLI"
authors = ["David Horner", "Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true

varvara = { package = "cardinal-varvara", version = "0.4.4" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
uxn = { package = "cardinal-uxn", version = "0.4.2", features = [
   "native",
] }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
uxn = { package = "cardinal-uxn", version = "0.4.2" }


