[package]
name = "cardinal-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/davehorner/cardinal"
description = "Simple Uxn + Varvara CLI"
authors = ["David Horner", "Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
uxn-tal = { version = "0.6.0", path = "../uxn-tal" }

varvara = { package = "cardinal-varvara", version = "0.8.0" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
uxn = { package = "cardinal-uxn", version = "0.5.6", features = [
   "native",
] }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
uxn = { package = "cardinal-uxn", version = "0.5.6" }

[dev-dependencies]
assert_cmd = "2.1.1"
regex = "1.12.2"
tempfile = "3.23.0"


