[package]
name = "cardinal-gui"
version = "0.3.6"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/davehorner/cardinal"
description = "Simple GUI for a Uxn + Varvara system"
authors = ["David Horner", "Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"
publish = true

[features]
uses_usb = ["dep:hidapi", "varvara/uses_usb"]
uses_gilrs = ["dep:gilrs", "uses_usb", "varvara/uses_gilrs"]
default = ["uses_usb"]
gilrs = ["dep:gilrs"]

[[bin]]
name="cardinal-orcas"
path="src/bin/cardinal-orcas/main.rs"

[dependencies]
anyhow.workspace = true
eframe.workspace = true
egui = "0.32.0"
env_logger.workspace = true
log.workspace = true
once_cell = "1.21.3"
winit = "0.30.11"

notify = "8.1.0"
serde_json = "1.0.141"
tempfile = "3.20.0"
#e_window = "0.1.13"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
varvara = { package = "cardinal-varvara", version = "0.4.5", default-features = false }
gilrs = { version = "0.11.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
cpal.workspace = true
getrandom = "0.3.3"
display-info = "0.5.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
cpal = { workspace = true, features = ["wasm-bindgen"] }
#getrandom = { version = "0.3.3", features = ["wasm_js"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
hidapi = { version = "2.6.3", optional = true, features = ["windows-native"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
uxn = { package = "cardinal-uxn", version = "0.4.3", features = ["native"] }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
uxn = { package = "cardinal-uxn", version = "0.4.3" }

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2.6.3", optional = true, features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
hidapi = { version = "2.6.3", optional = true, features = ["macos-shared-device"] }
