[package]
name = "cardinal-gui"
version = "0.4.4"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/davehorner/cardinal"
description = "Simple GUI for a Uxn + Varvara system"
authors = ["David Horner", "Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"
publish = true

[features]
uses_usb = ["dep:hidapi", "varvara/uses_usb"]
uses_gilrs = ["dep:gilrs", "uses_usb", "varvara/uses_gilrs"]
uses_e_midi = ["e_midi"]
default = ["uses_usb", "uses_gilrs","uses_e_midi"]
gilrs = ["dep:gilrs"]

[[bin]]
name="cardinal-orcas"
path="src/bin/cardinal-orcas/main.rs"

[dependencies]
anyhow.workspace = true
egui = "0.33.0"
env_logger.workspace = true
log.workspace = true
once_cell = "1.21.3"
winit = { version = "0.30.11", features = ["wayland"] }

notify = "8.1.0"
serde_json = "1.0.141"
tempfile = "3.20.0"
#e_window = "0.1.13"

varvara = { package = "cardinal-varvara", version = "0.7.1", default-features = false }
#varvara = { path = "../cardinal-varvara", package = "cardinal-varvara" }
gilrs = { version = "0.11.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
e_midi = { version = "0.1", optional = true }
clap.workspace = true
cpal.workspace = true
getrandom = "0.3.3"
display-info = "0.5.4"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
cpal = { workspace = true, features = ["wasm-bindgen"] }
#getrandom = { version = "0.3.3", features = ["wasm_js"] }
reqwest-wasm = { version = "0.11.16", features = ["blocking"] }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
hidapi = { version = "2.6.3", optional = true, features = ["windows-native"] }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
uxn = { package = "cardinal-uxn", version = "0.5.0", features = ["native"] }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
uxn = { package = "cardinal-uxn", version = "0.5.0" }

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2.6.3", optional = true, features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
hidapi = { version = "2.6.3", optional = true, features = ["macos-shared-device"] }

[target.'cfg(unix)'.dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
] }
