[package]
name = "cardinal-uxn"
version = "0.6.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/davehorner/cardinal"
description = "Uxn CPU interpreter"
authors = ["David Horner", "Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
anyhow.workspace = true
zerocopy.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[features]
alloc = []
default = ["alloc"]
native = []
