[package]
name = "cardinal-varvara"
version = "0.4.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/davehorner/cardinal"
description = "Varvara Ordinator"
authors = ["David Horner", "Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[dependencies]
chrono.workspace = true
log.workspace = true
static_assertions.workspace = true
zerocopy.workspace = true

uxn = { package = "cardinal-uxn", version = "0.4.0" }
#uxn = { path = "../cardinal-uxn", package = "cardinal-uxn" }

[dev-dependencies]
image.workspace = true
