[package]
name = "cardinal-varvara"
version = "0.5.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/davehorner/cardinal"
description = "Varvara Ordinator"
authors = ["David Horner", "Matt Keeter <matt.j.keeter@gmail.com>"]
readme = "../README.md"

[features]
default = ["uses_usb", "uses_gilrs"]
uses_usb = ["hidapi"]
uses_gilrs = ["gilrs"]

[dependencies]
chrono.workspace = true
log.workspace = true
static_assertions.workspace = true
zerocopy.workspace = true

uxn = { package = "cardinal-uxn", version = "0.4.5" }
#uxn = { path = "../cardinal-uxn", package = "cardinal-uxn" } 
gilrs = { version = "0.11.0", optional = true }

[target.'cfg(windows)'.dependencies]
hidapi = { version = "2.6.3", optional = true, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2.6.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
hidapi = { version = "2.6.3", optional = true, features = [
  "macos-shared-device",
] }

[dev-dependencies]
image.workspace = true
